Modified preprocessing for baseline

--- a/base_exp.ipynb
+++ b/base_exp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,8 @@
     "from data_loader import generate_data_set\n",
     "from data_loader import dmso_taxol_ProfileBag\n",
     "\n",
-    "from base_exp_multi_core import train\n",
+    "from base_exp import train\n",
+    "from base_exp import multi_mini_noise_signal_cv\n",
     "\n",
     "from sklearn import datasets\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +59,324 @@
    "source": [
     "# Full features\n",
     "## Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "K fold CV: 10it [00:05,  1.82it/s]\n",
+      "K fold CV: 10it [00:05,  1.78it/s]\n",
+      "K fold CV: 10it [00:05,  1.75it/s]\n",
+      "K fold CV: 10it [00:05,  1.71it/s]\n",
+      "K fold CV: 10it [00:05,  1.74it/s]\n",
+      "K fold CV: 10it [00:05,  1.74it/s]\n",
+      "K fold CV: 10it [00:05,  1.75it/s]\n",
+      "K fold CV: 10it [00:05,  1.70it/s]\n",
+      "K fold CV: 10it [00:05,  1.71it/s]\n",
+      "K fold CV: 10it [00:06,  1.63it/s]\n",
+      "K fold CV: 10it [00:06,  1.61it/s]\n",
+      "K fold CV: 10it [00:06,  1.62it/s]\n",
+      "K fold CV: 10it [00:05,  1.69it/s]\n",
+      "K fold CV: 10it [00:06,  1.64it/s]\n",
+      "K fold CV: 10it [00:06,  1.60it/s]\n",
+      "K fold CV: 10it [00:06,  1.56it/s]\n",
+      "K fold CV: 10it [00:06,  1.58it/s]\n",
+      "K fold CV: 10it [00:06,  1.53it/s]\n",
+      "K fold CV: 10it [00:06,  1.52it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# results,dic = multi_mini_noise_signal_cv(500,mini_data, \"taxol\", \"DMSO\", RandomForestClassifier(min_samples_split=50, random_state=0), 10, 0)\n",
+    "train(500, mini_data, RandomForestClassifier(min_samples_split=50, random_state=0), 0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "K fold CV: 10it [00:05,  1.74it/s]\n",
+      "K fold CV: 10it [00:05,  1.69it/s]\n",
+      "K fold CV: 10it [00:05,  1.73it/s]\n",
+      "K fold CV: 10it [00:05,  1.67it/s]\n",
+      "K fold CV: 10it [00:05,  1.68it/s]\n",
+      "K fold CV: 10it [00:05,  1.70it/s]\n",
+      "K fold CV: 10it [00:06,  1.64it/s]\n",
+      "K fold CV: 10it [00:05,  1.72it/s]\n",
+      "K fold CV: 10it [00:06,  1.67it/s]\n",
+      "K fold CV: 10it [00:06,  1.63it/s]\n",
+      "K fold CV: 10it [00:06,  1.64it/s]\n",
+      "K fold CV: 10it [00:06,  1.63it/s]\n",
+      "K fold CV: 10it [00:05,  1.71it/s]\n",
+      "K fold CV: 10it [00:06,  1.60it/s]\n",
+      "K fold CV: 10it [00:06,  1.59it/s]\n",
+      "K fold CV: 10it [00:06,  1.62it/s]\n",
+      "K fold CV: 10it [00:06,  1.54it/s]\n",
+      "K fold CV: 10it [00:06,  1.56it/s]\n",
+      "K fold CV: 10it [00:06,  1.54it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dic = multi_mini_noise_signal_cv(500,mini_data, \"taxol\", \"DMSO\", RandomForestClassifier(min_samples_split=50, random_state=0), 10, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0.05</th>\n",
+       "      <td>0.510</td>\n",
+       "      <td>0.099700</td>\n",
+       "      <td>0.504816</td>\n",
+       "      <td>0.067652</td>\n",
+       "      <td>0.498951</td>\n",
+       "      <td>0.060627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.10</th>\n",
+       "      <td>0.470</td>\n",
+       "      <td>0.053852</td>\n",
+       "      <td>0.497508</td>\n",
+       "      <td>0.067198</td>\n",
+       "      <td>0.507472</td>\n",
+       "      <td>0.093925</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.15</th>\n",
+       "      <td>0.478</td>\n",
+       "      <td>0.045122</td>\n",
+       "      <td>0.492043</td>\n",
+       "      <td>0.077470</td>\n",
+       "      <td>0.509132</td>\n",
+       "      <td>0.121349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.20</th>\n",
+       "      <td>0.538</td>\n",
+       "      <td>0.054736</td>\n",
+       "      <td>0.483976</td>\n",
+       "      <td>0.079624</td>\n",
+       "      <td>0.529100</td>\n",
+       "      <td>0.149325</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.25</th>\n",
+       "      <td>0.530</td>\n",
+       "      <td>0.058138</td>\n",
+       "      <td>0.469254</td>\n",
+       "      <td>0.082300</td>\n",
+       "      <td>0.538132</td>\n",
+       "      <td>0.183277</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.30</th>\n",
+       "      <td>0.576</td>\n",
+       "      <td>0.051225</td>\n",
+       "      <td>0.463279</td>\n",
+       "      <td>0.083025</td>\n",
+       "      <td>0.556693</td>\n",
+       "      <td>0.199668</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.35</th>\n",
+       "      <td>0.604</td>\n",
+       "      <td>0.041761</td>\n",
+       "      <td>0.449233</td>\n",
+       "      <td>0.089443</td>\n",
+       "      <td>0.562516</td>\n",
+       "      <td>0.214536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.40</th>\n",
+       "      <td>0.620</td>\n",
+       "      <td>0.049800</td>\n",
+       "      <td>0.437192</td>\n",
+       "      <td>0.098789</td>\n",
+       "      <td>0.573784</td>\n",
+       "      <td>0.229918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.45</th>\n",
+       "      <td>0.620</td>\n",
+       "      <td>0.045607</td>\n",
+       "      <td>0.424998</td>\n",
+       "      <td>0.113331</td>\n",
+       "      <td>0.580572</td>\n",
+       "      <td>0.245151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.50</th>\n",
+       "      <td>0.680</td>\n",
+       "      <td>0.057966</td>\n",
+       "      <td>0.407628</td>\n",
+       "      <td>0.113583</td>\n",
+       "      <td>0.609229</td>\n",
+       "      <td>0.258133</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.55</th>\n",
+       "      <td>0.684</td>\n",
+       "      <td>0.057827</td>\n",
+       "      <td>0.386953</td>\n",
+       "      <td>0.121222</td>\n",
+       "      <td>0.627157</td>\n",
+       "      <td>0.269813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.60</th>\n",
+       "      <td>0.734</td>\n",
+       "      <td>0.047371</td>\n",
+       "      <td>0.375869</td>\n",
+       "      <td>0.120349</td>\n",
+       "      <td>0.641740</td>\n",
+       "      <td>0.280826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.65</th>\n",
+       "      <td>0.778</td>\n",
+       "      <td>0.046861</td>\n",
+       "      <td>0.348767</td>\n",
+       "      <td>0.131334</td>\n",
+       "      <td>0.664006</td>\n",
+       "      <td>0.292834</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.70</th>\n",
+       "      <td>0.790</td>\n",
+       "      <td>0.037148</td>\n",
+       "      <td>0.326826</td>\n",
+       "      <td>0.143247</td>\n",
+       "      <td>0.692515</td>\n",
+       "      <td>0.302109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.75</th>\n",
+       "      <td>0.814</td>\n",
+       "      <td>0.050636</td>\n",
+       "      <td>0.296802</td>\n",
+       "      <td>0.148771</td>\n",
+       "      <td>0.719983</td>\n",
+       "      <td>0.294018</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.80</th>\n",
+       "      <td>0.848</td>\n",
+       "      <td>0.040200</td>\n",
+       "      <td>0.269875</td>\n",
+       "      <td>0.152383</td>\n",
+       "      <td>0.743810</td>\n",
+       "      <td>0.291604</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.85</th>\n",
+       "      <td>0.858</td>\n",
+       "      <td>0.042379</td>\n",
+       "      <td>0.242779</td>\n",
+       "      <td>0.165196</td>\n",
+       "      <td>0.771115</td>\n",
+       "      <td>0.285248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.90</th>\n",
+       "      <td>0.892</td>\n",
+       "      <td>0.044000</td>\n",
+       "      <td>0.207719</td>\n",
+       "      <td>0.173577</td>\n",
+       "      <td>0.804307</td>\n",
+       "      <td>0.256673</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.95</th>\n",
+       "      <td>0.926</td>\n",
+       "      <td>0.018000</td>\n",
+       "      <td>0.172631</td>\n",
+       "      <td>0.161618</td>\n",
+       "      <td>0.831021</td>\n",
+       "      <td>0.236428</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0         1         2         3         4         5\n",
+       "0.05  0.510  0.099700  0.504816  0.067652  0.498951  0.060627\n",
+       "0.10  0.470  0.053852  0.497508  0.067198  0.507472  0.093925\n",
+       "0.15  0.478  0.045122  0.492043  0.077470  0.509132  0.121349\n",
+       "0.20  0.538  0.054736  0.483976  0.079624  0.529100  0.149325\n",
+       "0.25  0.530  0.058138  0.469254  0.082300  0.538132  0.183277\n",
+       "0.30  0.576  0.051225  0.463279  0.083025  0.556693  0.199668\n",
+       "0.35  0.604  0.041761  0.449233  0.089443  0.562516  0.214536\n",
+       "0.40  0.620  0.049800  0.437192  0.098789  0.573784  0.229918\n",
+       "0.45  0.620  0.045607  0.424998  0.113331  0.580572  0.245151\n",
+       "0.50  0.680  0.057966  0.407628  0.113583  0.609229  0.258133\n",
+       "0.55  0.684  0.057827  0.386953  0.121222  0.627157  0.269813\n",
+       "0.60  0.734  0.047371  0.375869  0.120349  0.641740  0.280826\n",
+       "0.65  0.778  0.046861  0.348767  0.131334  0.664006  0.292834\n",
+       "0.70  0.790  0.037148  0.326826  0.143247  0.692515  0.302109\n",
+       "0.75  0.814  0.050636  0.296802  0.148771  0.719983  0.294018\n",
+       "0.80  0.848  0.040200  0.269875  0.152383  0.743810  0.291604\n",
+       "0.85  0.858  0.042379  0.242779  0.165196  0.771115  0.285248\n",
+       "0.90  0.892  0.044000  0.207719  0.173577  0.804307  0.256673\n",
+       "0.95  0.926  0.018000  0.172631  0.161618  0.831021  0.236428"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame.from_dict(dic, orient = 'index')"
    ]
   },
   {
@@ -334,7 +653,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "#     mean_accuracy = np.array(mean_mean_accuracy)\n",
+    "#     std_accuracy = np.array(std_mean_accuracy)\n",
+    "#     mean_pred_score_control = np.array(mean_pred_score_control)\n",
+    "#     std_pred_score_control = np.array(std_pred_score_control)\n",
+    "#     mean_pred_score_treatment = np.array(mean_pred_score_treatment)\n",
+    "#     std_pred_score_treatment = np.array(std_pred_score_treatment)\n",
+    "    \n",
+    "#     z_score = 1-3*(std_pred_score_control+std_pred_score_treatment)/(np.abs(mean_pred_score_control-mean_pred_score_treatment))\n",
+    "    \n",
+    "#     model_name = str(model).split(\"(\")[0]\n",
+    "#     feature_size = len(data_label_split(data)[0].columns)\n",
+    "    \n",
+    "#     plt.figure(figsize=(14, 5))\n",
+    "#     ax = plt.subplot(1,2,1)\n",
+    "#     plt.plot([i/100 for i in range(5,96,5)], mean_accuracy, '-')\n",
+    "#     plt.fill_between([i/100 for i in range(5,96,5)], \n",
+    "#                      (mean_accuracy)-std_accuracy, mean_accuracy+std_accuracy, alpha=0.2)\n",
+    "#     ax.set_title(\"Accuracy score of %s, %s cells, %s features\"%(model_name, 500, feature_size))\n",
+    "\n",
+    "#     ax = plt.subplot(1,2,2)\n",
+    "#     plt.plot([i/100 for i in range(5,96,5)], z_score, '-')\n",
+    "#     ax.set_title(\"Z_score of %s, %s cells, %s features\"%(model_name, 500, feature_size))\n",
+    "\n",
+    "#     plt.savefig(\"%s_sample%s_feature%s.png\" %(model_name, size, feature_size))"
+   ]
   },
   {
    "cell_type": "markdown",
