--- a/bag_profile.ipynb
+++ b/bag_profile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "from deepset_exp import test\n",
     "\n",
     "from model import SmallDeepSet\n",
-    "from model import FullDeepSet\n",
+    "from model import FullDeepSet, profile_AttSet\n",
     "\n",
     "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.preprocessing import LabelEncoder\n",
@@ -3643,6 +3643,431 @@
    ],
    "source": [
     "sf_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn.functional as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'torch' has no attribute 'unsequeeze'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-b5edd562a809>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munsequeeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'torch' has no attribute 'unsequeeze'"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.unsequeeze(torch.rand(10,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.rand(4,10,481)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = profile_AttSet(481)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[0.5026]], grad_fn=<SigmoidBackward>), tensor([[1.]]))"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a,b = model.forward(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "H = x.squeeze(0)\n",
+    "H = H.view(-1, model.input_feature)\n",
+    "H = model.feature_extractor_part2(H)  # NxL\n",
+    "\n",
+    "A = model.attention(H)  # NxK\n",
+    "A = torch.transpose(A, 1, 0)  # KxN\n",
+    "A = F.softmax(A, dim=1)  # softmax over N\n",
+    "M = torch.mm(A, H)  # KxL\n",
+    "\n",
+    "Y_prob = model.classifier(M)\n",
+    "Y_hat = torch.ge(Y_prob, model.thres).float()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([10, 481])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "H.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([10, 481])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "H.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[0.4996],\n",
+       "         [0.5000],\n",
+       "         [0.4998],\n",
+       "         [0.5001]], grad_fn=<SigmoidBackward>),\n",
+       " tensor([[0],\n",
+       "         [0],\n",
+       "         [0],\n",
+       "         [1]], dtype=torch.uint8))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SmallDeepSet()(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 10, 64])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nn.Linear(481, 64)(x).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 10, 64])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nn.Linear(481, 64)(x).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 10, 64])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nn.Linear(481, 64)(x).bmm(nn.Linear(481, 64)(x).transpose(1,2)).bmm(nn.Linear(481, 64)(x)).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 64, 10])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nn.Linear(481, 64)(x).transpose(1,2).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class MAB(nn.Module):\n",
+    "    def __init__(self, dim_Q, dim_K, dim_V, num_heads, ln=False):\n",
+    "        super(MAB, self).__init__()\n",
+    "        self.dim_V = dim_V\n",
+    "        self.num_heads = num_heads\n",
+    "        self.fc_q = nn.Linear(dim_Q, dim_V)\n",
+    "        self.fc_k = nn.Linear(dim_K, dim_V)\n",
+    "        self.fc_v = nn.Linear(dim_K, dim_V)\n",
+    "        if ln:\n",
+    "            self.ln0 = nn.LayerNorm(dim_V)\n",
+    "            self.ln1 = nn.LayerNorm(dim_V)\n",
+    "        self.fc_o = nn.Linear(dim_V, dim_V)\n",
+    "\n",
+    "    def forward(self, Q, K):\n",
+    "        Q = self.fc_q(Q)\n",
+    "        K, V = self.fc_k(K), self.fc_v(K)\n",
+    "\n",
+    "        dim_split = self.dim_V // self.num_heads\n",
+    "        Q_ = torch.cat(Q.split(dim_split, 2), 0)\n",
+    "        K_ = torch.cat(K.split(dim_split, 2), 0)\n",
+    "        V_ = torch.cat(V.split(dim_split, 2), 0)\n",
+    "\n",
+    "        A = torch.softmax(Q_.bmm(K_.transpose(1,2))/math.sqrt(self.dim_V), 2)\n",
+    "        O = torch.cat((Q_ + A.bmm(V_)).split(Q.size(0), 0), 2)\n",
+    "        O = O if getattr(self, 'ln0', None) is None else self.ln0(O)\n",
+    "        O = O + F.relu(self.fc_o(O))\n",
+    "        O = O if getattr(self, 'ln1', None) is None else self.ln1(O)\n",
+    "        return O\n",
+    "\n",
+    "class SAB(nn.Module):\n",
+    "    def __init__(self, dim_in, dim_out, num_heads, ln=False):\n",
+    "        super(SAB, self).__init__()\n",
+    "        self.mab = MAB(dim_in, dim_in, dim_out, num_heads, ln=ln)\n",
+    "\n",
+    "    def forward(self, X):\n",
+    "        return self.mab(X, X)\n",
+    "\n",
+    "class ISAB(nn.Module):\n",
+    "    def __init__(self, dim_in, dim_out, num_heads, num_inds, ln=False):\n",
+    "        super(ISAB, self).__init__()\n",
+    "        self.I = nn.Parameter(torch.Tensor(1, num_inds, dim_out))\n",
+    "        nn.init.xavier_uniform_(self.I)\n",
+    "        self.mab0 = MAB(dim_out, dim_in, dim_out, num_heads, ln=ln)\n",
+    "        self.mab1 = MAB(dim_in, dim_out, dim_out, num_heads, ln=ln)\n",
+    "\n",
+    "    def forward(self, X):\n",
+    "        H = self.mab0(self.I.repeat(X.size(0), 1, 1), X)\n",
+    "        return self.mab1(X, H)\n",
+    "\n",
+    "class PMA(nn.Module):\n",
+    "    def __init__(self, dim, num_heads, num_seeds, ln=False):\n",
+    "        super(PMA, self).__init__()\n",
+    "        self.S = nn.Parameter(torch.Tensor(1, num_seeds, dim))\n",
+    "        nn.init.xavier_uniform_(self.S)\n",
+    "        self.mab = MAB(dim, dim, dim, num_heads, ln=ln)\n",
+    "\n",
+    "    def forward(self, X):\n",
+    "        return self.mab(self.S.repeat(X.size(0), 1, 1), X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class SmallSetTransformer(nn.Module):\n",
+    "    def __init__(self,):\n",
+    "        super().__init__()\n",
+    "        self.enc = nn.Sequential(\n",
+    "            SAB(dim_in=481, dim_out=64, num_heads=4),\n",
+    "            SAB(dim_in=64, dim_out=64, num_heads=4),\n",
+    "        )\n",
+    "        self.dec = nn.Sequential(\n",
+    "            PMA(dim=64, num_heads=4, num_seeds=1),\n",
+    "            nn.Linear(in_features=64, out_features=1),\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.enc(x)\n",
+    "        x = self.dec(x)\n",
+    "        return x.squeeze(-1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 1, 64])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PMA(dim=64, num_heads=4, num_seeds=1)(SAB(dim_in=481, dim_out=64, num_heads=4)(x)).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.shuffle(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-2.3909e-02],\n",
+       "        [ 2.5366e-02],\n",
+       "        [ 2.7236e-02],\n",
+       "        [ 5.3927e-05]], grad_fn=<SqueezeBackward1>)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SmallSetTransformer()(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 10, 481])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.shape"
    ]
   },
   {
