--- a/bag_profile_debugger.ipynb
+++ b/bag_profile_debugger.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,32 @@
      "output_type": "stream",
      "text": [
       "Control accuracy:1.000, Treat accuracy:1.000, overally accuray:1.000\n",
-      "Epoch: 0, Loss: 0.0000, Train error: 0.0000\n"
+      "Epoch: 0, Loss: 0.0000, Train error: 0.0000\n",
+      "Epoch: 10, Loss: 0.0000, Train error: 0.0000\n",
+      "At 2th fold testing: "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "3 fold cross validation: 3it [33:55, 678.47s/it]\u001b[A\n",
+      "training at different percent:   0%|          | 0/1 [33:55<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Control accuracy:1.000, Treat accuracy:1.000, overally accuray:1.000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
