--- a/bag_profile.ipynb
+++ b/bag_profile.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import pandas\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
     "from data_loader import data_label_split\n",
@@ -1356,6 +1357,190 @@
    "source": [
     "sf_results"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class dmso_taxol_ProfileBag(D.Dataset):\n",
+    "    def __init__(self, df:pandas.DataFrame, size:int, bag_mean_size, bag_std_size,\n",
+    "                 perc:float, treatment:str, control:str, batch_size, merged_perc:float=0.5, transform:bool = False):\n",
+    "        batch_size = int(batch_size/2)\n",
+    "        self.df = df\n",
+    "        self.size = size\n",
+    "        self.batch_size = batch_size\n",
+    "        self.merged_pos_size = int(size) * batch_size\n",
+    "#         self.unmerged_neg_size = int(size * (1 - merged_perc)) * batch_size\n",
+    "        \n",
+    "        self.bag_mean_size = bag_mean_size\n",
+    "        self.bag_std_size = bag_std_size\n",
+    "        self.perc = perc\n",
+    "        self.treatment = treatment\n",
+    "        self.control = control\n",
+    "        self.bag_size = np.random.normal(bag_mean_size, bag_std_size, size).astype(int).repeat(batch_size)\n",
+    "\n",
+    "\n",
+    "        self.treatment_data = self.df[self.df[\"compound\"] == self.treatment]\n",
+    "        self.control_data = self.df[self.df[\"compound\"] == self.control]\n",
+    "        \n",
+    "        self.treatment_size = (self.bag_size * self.perc).astype(int)\n",
+    "        self.control_size = self.bag_size - self.treatment_size\n",
+    "        \n",
+    "        self.treatment_replace = len(self.treatment_data) < np.sum(self.treatment_size)\n",
+    "        self.control_replace = len(self.control_data) < np.sum(self.control_size)\n",
+    "        self.treat_index_list, self.control_index_list = self._get_sampling_index()\n",
+    "        \n",
+    "        self.transform = transform\n",
+    "        \n",
+    "    def _get_sampling_index(self):\n",
+    "        treat_index_list = []\n",
+    "        control_index_list = []\n",
+    "\n",
+    "        treat_length = len(self.treatment_data)\n",
+    "        control_length = len(self.control_data)\n",
+    "        \n",
+    "        index = np.arange(treat_length)\n",
+    "        for i in range(self.merged_pos_size):\n",
+    "            if len(index) < self.treatment_size[i]:\n",
+    "                index = np.arange(treat_length)\n",
+    "            z = np.random.choice(index, self.treatment_size[i], replace=self.treatment_replace)\n",
+    "            index = index[~np.isin(index, z)]\n",
+    "            treat_index_list.append(z)\n",
+    "\n",
+    "        index = np.arange(control_length)\n",
+    "        for i in range(self.merged_pos_size):\n",
+    "            if len(index) < self.control_size[i]:\n",
+    "                index = np.arange(control_length)\n",
+    "            z = np.random.choice(index, self.control_size[i], replace=self.control_replace )\n",
+    "            index = index[~np.isin(index, z)]\n",
+    "            control_index_list.append(z)\n",
+    "            \n",
+    "        return treat_index_list, control_index_list\n",
+    "        \n",
+    "    def _shuffle_tensor(self, mat):\n",
+    "        idxs = list(range(mat.shape[0]))\n",
+    "        random.shuffle(idxs)\n",
+    "        return mat[torch.tensor(idxs), :]    \n",
+    "    \n",
+    "    def __getitem__(self, index):\n",
+    "        index = index * self.batch_size\n",
+    "        X = []\n",
+    "        y = []\n",
+    "        for i in range(self.batch_size):\n",
+    "            merged_data = self.treatment_data.iloc[self.treat_index_list[index+i]].append(self.control_data.iloc[self.control_index_list[index+i]]) \n",
+    "            sub_X, sub_y = data_label_split(merged_data.sample(frac=1))\n",
+    "            sub_X, sub_y = torch.from_numpy(sub_X.values), [torch.tensor([1.0]),sub_y]\n",
+    "            if self.transform == True:\n",
+    "                sub_X = self._shuffle_tensor(sub_X)\n",
+    "            X.append(sub_X) \n",
+    "            y.append(sub_y)\n",
+    "            \n",
+    "        for i in range(self.batch_size):\n",
+    "            unmerged_bag_size = self.bag_size[index]\n",
+    "            sub_X, sub_y = data_label_split(self.control_data.sample(unmerged_bag_size))\n",
+    "            sub_X, sub_y = torch.from_numpy(sub_X.values), [torch.tensor([0.0]),sub_y]\n",
+    "            if self.transform ==  True:\n",
+    "                sub_X = self._shuffle_tensor(sub_X)\n",
+    "            X.append(sub_X)\n",
+    "            y.append(sub_y)\n",
+    "            \n",
+    "        X_shuf = []\n",
+    "        y_shuf = []\n",
+    "        index_shuf = list(range(len(X)))\n",
+    "        shuffle(index_shuf)\n",
+    "        for i in index_shuf:\n",
+    "            X_shuf.append(X[i])\n",
+    "            y_shuf.append(y[i])\n",
+    "            \n",
+    "        return torch.stack(X_shuf, dim = 0), y_shuf#torch.stack(y_shuf, dim = 0)\n",
+    "    \n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return self.size\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from random import shuffle\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = 90\n",
+    "end = 91\n",
+    "data = mini_data\n",
+    "num_bag = 60\n",
+    "bag_size_mean = 200\n",
+    "bag_size_std = 10\n",
+    "treatment = \"taxol\"\n",
+    "control = \"DMSO\"\n",
+    "batch_size = 8\n",
+    "model = profile_AttSet(481).cuda()#FullDeepSet(\"mean\").cuda()\n",
+    "splits = 3\n",
+    "epochs = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = dmso_taxol_ProfileBag(mini_data, 10, 5, 1,\n",
+    "                 0.5, \"taxol\", \"DMSO\", 2, 0.5, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[tensor([1.]),\n",
+       "       compound\n",
+       "  1222     DMSO\n",
+       "  1300     DMSO\n",
+       "  2271    taxol\n",
+       "  2601     DMSO\n",
+       "  1541    taxol],\n",
+       " [tensor([0.]),\n",
+       "       compound\n",
+       "  2038     DMSO\n",
+       "  1323     DMSO\n",
+       "  1891     DMSO\n",
+       "  1294     DMSO\n",
+       "  212      DMSO]]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset[2][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
