--- a/bag_profile.ipynb
+++ b/bag_profile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,20 +97,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_deepset = FullDeepSet().cuda()"
+    "full_deepset = FullDeepSet(481)#.cuda()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sf_deepset = SmallDeepSet().cuda()"
+    "sf_deepset = SmallDeepSet(481)#.cuda()"
    ]
   },
   {
@@ -1559,7 +1559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
